apps/ping-pong-log-output-data-sharing/manifests/service_log_output.yaml
apiVersion: v1
kind: Service
metadata:
  name: log-output-data-sharing-svc
spec:
  type: ClusterIP
  selector:
    app: ping-pong-log-output-data-sharing
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
